acceptance/backend/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dissco-backend-deployment
  namespace: default
  labels:
    app: dissco-backend-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dissco-backend
  template:
    metadata:
      labels:
        app: dissco-backend
        language: java
    spec:
      serviceAccountName: secret-manager
      automountServiceAccountToken: true
      containers:
        - name: dissco-backend
          image: public.ecr.aws/dissco/dissco-core-backend:sha-4349211   # Aug-05-2026
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              memory: "500Mi"
              cpu: "200m"
            limits:
              memory: "500Mi"
              cpu: "500m"
              ephemeral-storage: "32Mi"
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 120
            periodSeconds: 3
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 120
            failureThreshold: 2
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
          volumeMounts:
            - name: db-secrets
              mountPath: "/mnt/secrets-store/db-secrets"
              readOnly: true
            - name: aws-secrets
              mountPath: "/mnt/secrets-store/aws-secrets"
              readOnly: true
      volumes:
        - name: db-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "db-secrets"
        - name: aws-secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "aws-secrets"
