acceptance/backend/backend-route.yaml
apiVersion: v1
kind: Service
metadata:
  name: dissco-backend-service
spec:
  selector:
    app: dissco-backend
  ports:
    - protocol: TCP
      port: 8080
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: dissco-backend-route
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sandbox.dissco.tech`) && PathPrefix(`/api`)
      kind: Rule
      services:
        - name: dissco-backend-service
          namespace: default
          port: 8080
      middlewares:
        - name: dissco-backend-cors-headers
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: dissco-backend-cors-headers
spec:
  headers:
    accessControlAllowMethods:
      - "GET"
    accessControlAllowHeaders:
      - "*"
    accessControlAllowOriginListRegex:
      - "https://dev-orchestration\\.dissco\\.tech(.*)"
      - "https://osca-simple.netlify.app/(.*)"
    accessControlMaxAge: 100
    addVaryHeader: true
